756699:TISKIDK-1415:Terms and conditions alignment fixed

--- a/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-blue/css/style.css
+++ b/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-blue/css/style.css
@@ -67001,7 +67001,7 @@ body .account .right-account .order-history .product-block li.item .attributes p
   }		/*TISPRDT-1179*/
  /*  start of PRDI-177 */
 #OfferWrap .Inner .show-termsConditions p {
-	text-align: justify !important;
+	/* text-align: justify !important; */	/* Commented for TISKIDK-1415 */
 	text-align: center !important;	/* TISKIDK-1415 */
 	}
 	/* End of PRDI-177 */
